<resources>
    <string name="facebook_app_id">418441055652708</string>
    <string name="fb_login_protocol_scheme">fb418441055652708</string>
    <string name="app_name">João Carlos Cabeleireiro</string>
    <string name="services">Serviços</string>
    <string name="date">Data</string>
    <string name="time">Horário</string>
    <string name="select_time">Selecione uma data para escolher um horário!</string>
    <string name="select_date">Selecione um serviço para escolher uma data!</string>
    <string name="times">Horários</string>
    <string name="unavailable_time">Este horário está indisponível!</string>
    <string name="schedule">Agendar</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login_message">Bem vindo! Crie sua conta ou logue para \n você agendar seus horários para cortar \n seu cabelo!</string>
    <string name="not_loged">Você não esta logado</string>
    <string name="not_loged_msg">Para marcar um horário comigo, preciso saber quem você é, Ok?</string>
    <string name="ok_log_in">Ok, quero logar!</string>
    <string name="login_canceled">Login cancelado!</string>
    <string name="choose_service">Escolha um Serviço</string>
    <string name="choose_date">Escolha uma Data</string>
    <string name="choose_time">Escolha um Horário</string>
    <string name="verify_correct_data">Verifique se os dados estão corretos!</string>
    <string name="client_show">Cliente: </string>
    <string name="service_show">Serviço:</string>
    <string name="date_show">Data:</string>
    <string name="time_show">Horário:</string>
    <string name="data_correct">Os dados estão corretos?</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="error_save_data">Erro ao salvar os dados, tente novamente mais tarde!</string>
    <string name="please_wait">Por favor, aguarde</string>
    <string name="saving_data">Salvando seus dados</string>
    <string name="schedule_success">, seu hórario foi agendado com sucesso!</string>
    <string name="error">Erro:</string>
    <string name="hello">Olá</string>
    <string name="hello_msg">, agora você podera marcar seus horários para cortar seu cabelo!</string>
    <string name="welcome">Bem vindo</string>
    <string name="welcome_back">Bem vindo de volta</string>
    <string name="hello_back">, que bom que você voltou!</string>
    <string name="proceed">Prosseguir</string>
    <string name="erro_save_user_data">Erro ao salvar seus dados, tente novamente mais tarde!</string>
    <string name="not_loged_main">Olá, você não esta logado!</string>
    <string name="exit">Sair</string>
    <string name="exit_msg">Você deseja realmente desconectar sua conta?</string>
    <string name="exit_title">Está Cedo!</string>
    <string name="about">Sobre</string>
    <string name="version">Versão</string>
    <string name="developed">Desenvolvedor</string>
    <string name="conect_with_us">Fale Conosco</string>
    <string name="contact">Contato</string>
    <string name="talk_whats">Fale comigo pelo WhatsApp</string>
    <string name="shinoda_labs">Shinoda Labs ©</string>
    <string name="about_desc">Aplicativo criado para o agendamento de cortes de cabelo, e maior facilidade para os amigos e clientes</string>
    <string name="soon">Em Breve!</string>
    <string name="navigation_drawe_open">Abrir Navigation Drawer</string>
    <string name="navigation_drawe_close">Fechar Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scedule_time">Agendar Horário</string>
    <string name="my_schedules">Meus Horários</string>
    <string name="dones">Concluídos</string>
    <string name="others">Outros</string>
    <string name="sign_out">Sair</string>
    <string name="personal_data">Dados Pessoais</string>
    <string name="email">E-mail</string>
    <string name="display_name">Nome de exibição</string>
    <string name="whats_app">WhatsApp</string>
    <string name="profile">Perfil</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="save">Salvar</string>
    <string name="fill_whats_app">Preecha o número de seu WhatsApp</string>
    <string name="check_whats_app">Confira se seu número do WhatsApp está correto!</string>
    <string name="wish_save">Deseja salvar?</string>
    <string name="success_save_data">Dados salvos com sucesso!</string>
    <string name="getting_data">Buscando seus dados</string>
    <string name="erro_get_user_data">Erro ao buscar seus dados</string>
    <string name="loading">Carregando …</string>
    <string name="no_time_scheduled">Você não tem nenhum horário marcado ainda</string>
    <string name="no_time_scheduled_done">Você não tem nenhum horário marcado que ja tenha sido terminado.</string>
    <string name="no_time_scheduled_canceled">Você não tem nenhum horário marcado cancelado</string>
    <string name="schedule_subtitle">Agendamento #</string>
    <string name="schedule_detail">Detalhes do Agendamento</string>
    <string name="type_service">Tipo de Serviço</string>
    <string name="schedule_date">Data do Agendamento</string>
    <string name="service_price">Preço do Serviço</string>
    <string name="time_schedule">Horário do Agendamento</string>
    <string name="schedule_status">Status do Agendamento</string>
    <string name="confirmed_schedule">Agendamento Confirmado</string>
    <string name="scheduled">Agendado</string>
    <string name="canceled">Cancelado</string>
    <string name="done">Concluído</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="schedule_options">Opções do Agendamento</string>
    <string name="cancel_schedule">Cancelar Agendamento</string>
    <string name="error_load_data">Erro ao carregados os dados</string>
    <string name="schedule_done_cancel_msg">Este agendamento já esta concluido, e não pode ser cancelado!</string>
    <string name="schedule_canceled_cancel_msg">Este agendamento já está cancelado!</string>
    <string name="cancel_schedule_msg">Você deseja realmnte cancelar este agendamento?\n\nApós cancelado não podera ser revertido!</string>
    <string name="canceling_schedule">Cancelando Horário</string>
    <string name="error_cancel_schedule">Erro ao cancelar o horário! Tente novamente mais tarde!</string>
    <string name="success_cancel_schedule">Horário cancelado com sucesso!</string>
    <string name="ops">Ops ...</string>
    <string name="undertand">Ok, entendi</string>
    <string name="ops_msg">Parece que alguem foi mais rápido que você!\nEste horário acabou de ser agendando por outro cliente\nEscolha um horário diferente!</string>

</resources>
