<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_schedule_time"
            android:icon="@drawable/calendar"
            android:title="@string/scedule_time" />

        <item
            android:id="@+id/nav_my_schedules"
            android:icon="@drawable/schedule"
            android:title="@string/my_schedules" />

    </group>

    <item android:title="@string/others">

        <menu>

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/exit"
                android:title="@string/sign_out" />

        </menu>

    </item>

</menu>